# card-platform

./: .dockerignore  .env.docker.example  .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.rest
.github/workflows/: build.yml
src/: auth.rs  errors.rs  init.rs  main.rs  middleware.rs
src/handlers/: card.rs  mod.rs  user.rs
src/models/: card.rs  mod.rs  user.rs
static/: app.js  index.html  styles.css
static/js/: app.js  router.js
