[package]
name = "card-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.6"
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
thiserror = "1.0"
dotenv = "0.15"
serde_with = "3.0"
jsonwebtoken = "8.3"
bcrypt = "0.15"
log4rs = "1.2"
